# aistralis

./: .gitattributes  .gitignore  COMMAND_TO_AGENT.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cal.rs  calculator.rs  example.rs  grocery_checklist.md
TASKS/: ADR-013-tui-completion-deployment-plan.md  ADR-019-adr-018-follow-up-correctness-cutover-cleanup.md  ADR-020-looping-architecture-enriched-response-correctness.md  ADR-021-codebase-audit-dead-weight-duplication-shared-code-opportunities.md  ADR-README.md  CORE-02-mdbook-scaffold.md  CORE-03-docs-workflow-pinned-versions.md  CORE-04-iac-doc-generation-pipeline.md  CORE-07-layout-manager-extraction.md  CORE-08-frame-composition-order.md  CORE-09-ui-state-slices.md  CORE-10-overlay-event-router.md  CORE-11-uiupdate-overlay-mapping.md  CORE-12-bounded-transcript.md  CORE-12-transcript-retention-bounds.md  CORE-13-dirty-render-guard.md  CORE-14-panic-hook-terminal-restore.md  CRIT-14-effective-tool-timeout.md  CRIT-15-prune-tool-pairing-safety.md  CRIT-16-raw-editor-tty-gating.md  DISPATCH-ADR-019.md  DOC-01-change-safety-policy.md  DOC-02-pages-mdbook-deployment-standard.md  FEAT-10-header-status-renderer-contract.md  FEAT-11-overlay-renderer-family.md  FEAT-12-diff-overlay-viewer.md  FEAT-13-multiline-input-contract.md  FEAT-14-prompt-history-overlay-safety.md  FEAT-15-scrollback-navigation-controls.md  FEAT-15-scrollback-viewport.md  FEAT-16-idle-interrupt-feedback-and-input-durability.md  FEAT-16-idle-interrupt-input-drop-feedback.md  README.md  REF-02-runtime-mode-contract.md  REF-05-runtime-loop-skeleton.md  (+7 more)
(+98 files in other folders)
