[package]
name = "aistar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
